--- a/src/components/blocks/Title.astro
+++ b/src/components/blocks/Title.astro
@@ -2,19 +2,9 @@
 
 ---
 
-<h1 class="flex md:flex-row flex-col md:gap-5 gap-0 text-5xl sm:text-6xl font-black justify-center items-center">
-  <span
-    class="block text-transparent bg-clip-text bg-gradient-to-br from-green-300 to-green-500"
-    >Анонимные</span
-  >
-  <span
-
-    class="block text-transparent bg-clip-text bg-gradient-to-br from-yellow-300 to-orange-500"
-    >Интернет</span
-  >
-  <span
- 
-    class="block text-transparent bg-clip-text bg-gradient-to-br from-red-300 to-red-500"
-    >Зависимые</span
-  >
-</h1>
+<div class="text-center flex flex-col gap-4 items-center">
+  <h1 class="font-black text-5xl xl:text-6xl text-zinc-800">
+    Анонимные Интернет Зависимые
+  </h1>
+  <p class="text-2xl text-zinc-600">от устройств, цифровых технологий и потребления любого контента</p>
+</div>
