--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,57 +1,85 @@
 ---
-import { getCollection } from 'astro:content'
-import AIZinfosvg from '../components/AIZinfosvg.astro'
-import AIZsvg from '../components/AIZsvg.astro'
-import CTA from '../components/CTA.astro'
-import BlockMsgs from '../components/blocks/BlockMsgs.astro'
-import Title from '../components/blocks/Title.astro'
-import Layout from '../layout/Layout.astro'
+import Title from "../components/blocks/Title.astro"
+import Layout from "../layout/Layout.astro"
 
 const links = [
-  // { name: '🎈 Посты', link: '/posts', showPostCount: true },
-  { name: 'Присоединиться к нам', link: 'https://t.me/aiz_itta', styleWow: true },
-  { name: 'Инфоканал', link: 'https://t.me/aiz_info', styleInfo: true },
-  // { name: '💎 Истории', link: '/stories', showPostCountStory: true },
+	{
+		name: "Кто такие АИЗ?",
+		link: "https://internetaddicts.ru/posts/kto-takie-aiz/",
+	},
+	{
+		name: "Кто такой наставник в АИЗ?",
+		link: "https://internetaddicts.ru/posts/kto-takoj-sponsor-nastavnik-v-anonimnyh-internet-zavisimyh/",
+	},
+	{
+		name: "Что дают нам шаги? Принципы шагов.",
+		link: "https://internetaddicts.ru/posts/princzipy-12-shagov-v-nashih-delah/",
+	},
+	{
+		name: "Инструменты для полноценной жизни",
+		link: "https://internetaddicts.ru/posts/instrumenty-dlya-polnoczennoj-zhizni/",
+	},
 ]
-
-// const showPostCountLength = (await getCollection('posts')).length
-// const showPostCountLengthStory = (await getCollection('story')).length
 ---
 
 <Layout
-  title="Анонимные Интернет Зависимые - СНГ"
-  desc="Это сообщество людей, которые поддерживают друг друга в преодолении проблем, вызванных одержимым использованием интернета и технических устройств."
+	title="Анонимные Интернет Зависимые"
+	desc="Это сообщество людей, которые поддерживают друг друга в преодолении проблем, вызванных одержимым использованием интернета и технических устройств."
 >
-  <div class="flex flex-col gap-20">
-    <Title />
+	<Title />
+	<section class="max-w-[880px] mx-auto flex flex-col gap-10 text-zinc-600">
+		<nav class="flex justify-between items-center flex-wrap gap-2 md:gap-3">
+	<div class="flex flex-wrap gap-2 md:gap-3">
+	  		<a
+  				href="https://t.me/aiz_itta"
+  				class="text-green-700 self-end bg-green-50 ring-1 ring-green-400 rounded-full px-2.5 py-2 w-full md:w-auto md:text-left text-center"
+  				>👍 Присоединиться к АИЗ</a
+  			>
+  			<a
+  				href="https://t.me/aiz_info"
+  				class="text-slate-700 self-end bg-slate-50 ring-1 ring-slate-400 rounded-full px-2.5 py-2 w-full md:w-auto md:text-left text-center"
+  				>ℹ️ Инфоканал АИЗ</a
+  			>
+	</div>
+      <a
+				href="https://t.me/all_12steps"
+				class="text-sky-700 self-end bg-sky-50 ring-1 ring-sky-400 rounded-full px-2.5 py-2 w-full md:w-auto md:text-left text-center"
+				>🦋 Материалы по 12 шагам</a
+			>
+		</nav>
 
-    <nav
-      class="bg-white md:flex-row flex-col rounded-xl p-2 gap-2 flex items-center max-w-4xl mx-auto"
-    >
-      {
-        links.map((item) => (
-          <a
-            href={item.link}
-            class={`${
-              item.styleWow
-                ? 'flex gap-2 py-2 px-3 rounded-lg bg-gradient-to-r from-green-400 to-emerald-400 text-white font-bold tracking-wide'
-                : 'py-2 px-3 rounded-lg bg-gray-50 ring-1 ring-gray-100 hover:bg-gray-100 transition-colors ease-linear font-medium text-center self-stretch ' +
-                  (item.styleInfo
-                    ? 'flex item gap-2 py-2 px-3 rounded-lg bg-gradient-to-tr from-purple-400 to-indigo-500 text-white font-bold tracking-wide justify-center'
-                    : null)
-            }  `}
-          >
-            {item.styleWow ? <AIZsvg /> : null} {item.styleInfo ? <AIZinfosvg /> : null}{' '}
-            {item.name} 
-            </a>
-            ))
-          }
-          <!-- {item.showPostCount ? ` (${showPostCountLength})` : null}
-          {item.showPostCountStory ? ` (${showPostCountLengthStory})` : null} -->
-    </nav>
-
-    <CTA />
-
-    <BlockMsgs />
-  </div>
+		<p class="text-xl leading-relaxed font-light">
+			Мы рады, что вы нашли нас, и надеемся, что наше сообщество окажется для вас
+			полезным, как и для нас. <b>АИЗ</b> - это двенадцатишаговое сообщество людей,
+			которые поддерживают друг друга в выздоровлении от залипания в интернете.
+		</p>
+		<p class="text-xl leading-relaxed font-light">
+			К ним относятся зависимость от <b>социальных сетей</b>, <b>смартфонов</b>, <b
+				>коротких видео</b
+			>, <b>аудиоконтента</b>, новостей или любой другой деятельности в цифровом мире,
+			которая становится проблемной в жизни.
+		</p>
+		<p class="text-xl leading-relaxed font-light">
+			<b>Присоединиться к нам - может каждый</b>, независимо от возраста, пола,
+			национальности, убеждений, ментальных состояний, диагнозов и религиозных взглядов.
+		</p>
+		<div class="flex gap-6 flex-wrap">
+			<h2 class="text-3xl font-bold md:max-w-xs">
+				🫶 Возможно, тебе будет полезно это прочесть
+			</h2>
+			<nav class="flex flex-col gap-3">
+				{
+					links &&
+						links.map(item => (
+							<a
+								href={item.link}
+								class="text-blue-500 underline underline-offset-4 font-medium"
+							>
+								{item.name}
+							</a>
+						))
+				}
+			</nav>
+		</div>
+	</section>
 </Layout>
