--- a/src/pages/stories.astro
+++ b/src/pages/stories.astro
@@ -9,8 +9,11 @@ const stories = await getCollection('story')
   title="Личные истории членов"
   desc="Личные истории членов АИЗ, которые прошли путь и пришли к душевному спокойствию."
 >
-  <div class="container">
-    <div class="grid gap-5 grid-cols-1 md:grid-cols-2">
+
+ <a class=" text-blue-500 self-end bg-blue-50 ring-1 ring-blue-400 rounded-full px-2.5 py-2 font-medium" href="https://t.me/KamilTAT"
+				>Прислать историю</a>
+
+    <div class="flex flex-col gap-6">
       {
         stories &&
           stories.map((item) => (
@@ -18,7 +21,7 @@ const stories = await getCollection('story')
               href={`/stories/${item.slug}/`}
               class="hover:translate-y-1  transition-all ease-out"
             >
-              <article class="flex flex-col gap-2 bg-white p-4 rounded-2xl ring-1 ring-gray-200 outline outline-offset-2 outline-blue-100">
+              <article class="flex flex-col gap-2 bg-white p-4 rounded-2xl">
                 <h3 class="font-bold text-2xl">{item.data.title}</h3>
                 <p class="font-normal leading-relaxed text-gray-500 line-clamp-2">
                   {item.data.description}
@@ -28,5 +31,5 @@ const stories = await getCollection('story')
           ))
       }
     </div>
-  </div>
+
 </Layout>
