Изменены две ссылки на главной, поправлена информация о группах

--- a/src/pages/groups.astro
+++ b/src/pages/groups.astro
@@ -15,6 +15,7 @@ const dayOrder = {
 	Пятница: 5,
 	Суббота: 6,
 	Воскресенье: 7,
+	Спонтанно: 8,
 }
 
 function sortGroupsByDay(groups) {
@@ -60,7 +61,7 @@ function sortGroupsByDay(groups) {
 								href={group.data.link}
 								class="text-center py-1 px-2 rounded-md bg-blue-500 text-white hover:bg-blue-700"
 							>
-								Войти
+								Войти в чат
 							</a>
 						</div>
 					</div>
@@ -93,9 +94,9 @@ function sortGroupsByDay(groups) {
 
 							<a
 								href={group.data.link}
-								class="text-center py-1 px-2 rounded-md bg-purple-500 text-white hover:bg-purple-700"
+								class="text-center py-1 px-2 rounded-md bg-blue-500 text-white hover:bg-blue-700"
 							>
-								На карте
+								Войти в чат
 							</a>
 						</div>
 					</div>
