--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,15 +30,15 @@ const links = [
 	<section class="max-w-[880px] mx-auto flex flex-col gap-10 text-zinc-600">
 		<nav class="flex justify-between items-center flex-wrap gap-2 md:gap-3">
 	<div class="flex flex-wrap gap-2 md:gap-3">
-	  		<a
-  				href="https://t.me/aiz_itta"
-  				class="text-green-700 self-end bg-green-50 ring-1 ring-green-400 rounded-full px-2.5 py-2 w-full md:w-auto md:text-left text-center"
-  				>👍 Присоединиться к АИЗ</a
-  			>
-  			<a
-  				href="https://t.me/aiz_info"
-  				class="text-slate-700 self-end bg-slate-50 ring-1 ring-slate-400 rounded-full px-2.5 py-2 w-full md:w-auto md:text-left text-center"
+			<a
+  				href="https://t.me/resources_aiz"
+				class="text-green-700 self-end bg-green-50 ring-1 ring-green-400 rounded-full px-2.5 py-2 w-full md:w-auto md:text-left text-center"
   				>ℹ️ Инфоканал АИЗ</a
+  			>
+	  		<a
+  				href="https://t.me/+quEvZUE0byhhZTli"
+  				class="text-slate-700 self-end bg-slate-50 ring-1 ring-slate-400 rounded-full px-2.5 py-2 w-full md:w-auto md:text-left text-center"
+  				>❔ Задать вопрос</a
   			>
 	</div>
       <a
